coming along now...

--- a/index.qmd
+++ b/index.qmd
@@ -20,6 +20,22 @@ Get a protein from the RCSB PDB with:
 # Filter Attempt
 
 ```{.clojure .livemol}
+[:root {}
+ [[:download {:url "https://files.wwpdb.org/download/1cbs.cif"}
+   [[:parse {:format "mmcif"}
+     [[:structure {:type "model"}
+       [[:component {:selector "all"}
+         [[:representation {:type "cartoon"}
+           [[:color {:color "red"} nil]]]]]]]]]]]]]
+```
 
-[:div {} []]
+
+```{.clojure .livemol}
+[:root {}
+ [[:download {:url "https://files.wwpdb.org/download/1cbs.cif"}
+   [[:parse {:format "mmcif"}
+     [[:structure {:type "model"}
+       [[:component {:selector "all"}
+         [[:representation {:type "cartoon"}
+           [[:color {:color "blue"} nil]]]]]]]]]]]]]
 ```
